/* Japanese */ +sense fix +formatting <倪#48176882>

--- a/en/倪/倪.11045.wikitext
+++ b/en/倪/倪.11045.wikitext
@@ -50,10 +50,15 @@
 ===Kanji===
 {{ja-kanji|rs=人08}}
 
-# [[stare]]
+# {{l|en|small}} {{l|en|child}}
+# {{l|en|edge}}, {{l|en|limit}}, {{l|en|boundary}}
 
 ====Readings====
-{{ja-readings|goon=[[げ]] (ge)|kanon=[[げい]] (gei)|kun=[[きわ]] (kiwa)}}
+{{ja-readings
+|goon=げ
+|kanon=げい
+|kun=きわ
+}}
 
 ====Compounds====
 {{der-top|Compounds}}
