--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -45,7 +45,10 @@
 # [[southwest]]
 
 ====Readings====
-* {{ja-readings|on=[[こん]] (kon)|kun=[[つち]] (tsuchi), [[ひつじさる]] (hitsujisaru)}}
+* {{ja-readings
+|goon=こん
+|kanon=こん
+|kun=[[つち]] (tsuchi), [[ひつじさる]] (hitsujisaru)}}
 
 ===Noun===
 {{ja-noun|ひつじさる}}
