Undo revision 33932074 by [[Special:Contributions/Kamilz|Kamilz]] ([[User talk:Kamilz|talk]]): Unverified <垔#48180228>

--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -36,9 +36,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
 
-# to restrain
-# to dam a stream and change its direction
-# [[mound]]
+# {{defn|lang=ja|sort=土06}}
 
 ====Readings====
 * {{ja-readings|on=[[おう]] (ō), [[じゅ]] (ju), [[とう]] (tō), [[ず]] (zu)|kun=[[ふさぐ]] (fusagu)}}
