--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -37,6 +37,9 @@
 # [[shame]]
 #: {{zh-alt-inline|詬}}
 
+===Compounds===
+{{zh-der|含垢忍恥|亂首垢面|垢泥|含垢|含垢藏疾|塵垢|垢汙|忍垢|忍辱含垢|忍恥含垢|忍垢偷生|塵垢秕糠|含垢納汙|含垢忍辱|垢離|垢面|囚首垢面|刮垢磨光|無垢衣|打骸垢|汙垢|泥垢|洗垢索瘢|滌瑕蕩垢|洗垢求瘢|牙垢|洗垢尋痕|櫛垢爬癢|披髮垢面|洗垢匿瑕|油垢|蕩垢滌汙|藏垢懷恥|除汙去垢|藏垢納汙|納垢藏汙|面垢|離垢|藏汙納垢|蓬頭垢面|鍋垢|索垢尋疵|脫垢離塵|蓬首垢面|耳垢}}
+
 ----
 
 ==Japanese==
