--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -571,7 +571,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * Welsh: {{t+|cy|torri}}
 * ǃXóõ: {{t|nmn|gǂháá}}
 * Yiddish: {{t|yi|האַקן}}, {{t|yi|שנײַדן}}
-* Zazaki: {{t|zza|bırnayen}}
+* Zazaki: {{t|zza|bırnayen}}, {{t|zza|birnayîş}}
 {{trans-bottom}}
 
 {{trans-top|to divide with a sharp instrument}}
