--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -223,6 +223,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Oriya: {{t+|or|ପୋଲ|tr=pōla|sc=Orya}}
 * Ossetian: {{t|os|хид|sc=Cyrl}}
 * Pashto: {{t+|ps|پل|tr=pul|sc=ps-Arab}}
+* Pennsylvania German: {{t|pdc|Brick|f}}
 * Persian: {{t+|fa|پل|tr=pol}}
 * Polish: {{t+|pl|most|m}}
 * Portuguese: {{t+|pt|ponte|f}}
