/* Alternative forms */ OBSOLETE!! <branch#48197564>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Alternative forms===
-* {{l|en|braunch}}
+* {{l|en|braunch}} {{qual|obsolete}}
 
 ===Etymology===
 [[File:Acacia constricta branch.jpg|thumb|Tree branches]]
