--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -365,6 +365,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Irish: {{t+|ga|droichead|m}}
 * Japanese: {{t|ja|船橋|tr=せんきょう, senkyo|sc=Jpan}}
 {{trans-mid}}
+* Maori: {{t|mi|piriti }}
 * Norwegian:
 *: Bokmål: {{t+|nb|bro|m|f}}, {{t|nb|kommandobro}}, {{t|nb|styrehus|n}}
 *: Nynorsk: {{t|nn|styrehus|n}}, {{t|nn|styrhus|n}}
