--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -92,9 +92,9 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[가]], [[하]]|rv=ga, ha|mr=ka, ha}}
+{{ko-hanja|hangeul=[[가]], [[하]]|rv=ga, ha|mr=ka, ha|eumhun=거짓}}
 
-# {{defn|lang=ko|sort=人09}}
+# Lie
 
 ----
 
