Undo revision 48210076 by [[Special:Contributions/Mr KEBAB|Mr KEBAB]] ([[User talk:Mr KEBAB|talk]]) <New Zealand#48210077>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -4,9 +4,8 @@
 From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
 
 ===Pronunciation===
-* {{a|RP}} {{enPR|nyoo͞-zē'lənd}}, {{IPA|/nju ˈziː.lənd/|/ˌnjuː -/|lang=en}}
-* {{a|GA}} {{enPR|noo͞-zē'lənd}}, {{IPA|/nu ˈzi.lənd/|/ˌnu -/|lang=en}}
-* {{a|General New Zealand {{IPA|/njʉː ˈziːlɘnd/|/ˌnjʉː -/|/- ˈzɘl-/|lang=en}}
+* {{enPR|nyoo͞-zē'lənd}}, {{IPA|/ˈnjuː ˈziː.l(ə)nd/|lang=en}}
+* {{a|US}} {{enPR|noo͞-zē'lənd}}, {{IPA|/ˈnu ˈzi.lənd/|lang=en}}
 * {{audio|en-us-New Zealand.ogg|Audio (US)|lang=en}}
 {{rfap|en|British and New Zealand}}
 
