--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -6,7 +6,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 ===Pronunciation===
 * {{a|RP}} {{enPR|nyoo͞-zē'lənd}}, {{IPA|/nju ˈziː.lənd/|/ˌnjuː -/|lang=en}}
 * {{a|GA}} {{enPR|noo͞-zē'lənd}}, {{IPA|/nu ˈzi.lənd/|/ˌnu -/|lang=en}}
-* {{a|General New Zealand}} {{IPA|/njʉː ˈziːlɘnd/|/ˌnjʉː -/|lang=en}}
+* {{a|GNZ}} {{IPA|/njʉː ˈziːlɘnd/|/ˌnjʉː -/|lang=en}}
 * {{audio|en-us-New Zealand.ogg|Audio (US)|lang=en}}
 {{rfap|en|British and New Zealand}}
 
