--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -153,6 +153,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, from {{der|e
 * Uzbek: {{t+|uz|boʻlim}}
 * Vietnamese: {{t+|vi|nhánh}}, {{t+|vi|ngành}}
 * Walloon: {{t+|wa|coxhe|f}}
+* Yagnobi: {{t|yai|шох}}
 * Yiddish: {{t|yi|צווײַג|m|sc=Hebr}}
 * ǃXóõ: {{qualifier|small one}} {{t|nmn|gǀkxʻāa-kú}}
 {{trans-bottom}}
