--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -57,8 +57,6 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Albanian: {{t+|sq|bubullimë|f}}, {{t|sq|mumrimë|f}}
 * Arabic: {{t+|ar|رَعْد|m}}
 *: Moroccan Arabic: {{t|ary|رْعدة|f|tr=rʿəda}}
-* Aramaic:
-*: Syriac: {{t|syr|ܪܥܡܐ|m|tr=raˁmā|sc=Syrc}}
 * Armenian: {{t+|hy|որոտ}}
 * Asturian: {{t|ast|troníu|m}}, {{t|ast|tronabríu|m}}, {{t|ast|tronada|f}}, {{t|ast|truenu|m}}, {{t|ast|renuberu|m}}
 * Azeri: {{t|az|göy gurultusu}}
@@ -158,8 +156,9 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Slovak: {{t+|sk|hrom|m}}
 * Slovene: {{t+|sl|grom|m}}, {{t|sl|grmenje|n}}
 * Spanish: {{t+|es|trueno|m}}
-* Swahili: {{qualifier|nc 9/10}} {{t+check|sw|radi}} ''''
-* Swedish: {{t+|sv|åska|c}}, (åsk) {{t+|sv|smäll|c}}
+* Swahili: {{qualifier|nc 9/10}} {{t+check|sw|radi}}
+* Swedish: {{t+|sv|åska|c}}, {{t+|sv|([[åsk]]) [[smäll]]|c}}
+* Syriac, Classical: {{t|syc|ܪܥܡܐ|m|tr=raˁmā|sc=Syrc}}
 * Tagalog: {{t|tl|kulog}}
 * Tamil: {{t+|ta|இடி|sc=Taml}}
 * Taos: {{t|twf|nąłàcit’ə́otuna}}
