--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -379,9 +379,11 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 *: Lower Sorbian: {{t|dsb|łojś|impf}}
 * Spanish: {{t+|es|capturar}}
 * Swedish: {{t+|sv|fånga}}
+* Tajik: {{t|tg|капидан}}
 * Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}
 * Venetian: {{t|vec|ciapar}}
 * Welsh: {{t+|cy|dal}}
+* Yagnobi: {{t|tg|капак|tr=kapak}}
 * Yiddish: {{t|yi|כאַפּן}}
 {{trans-bottom}}
 
