--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -380,6 +380,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Spanish: {{t+|es|capturar}}
 * Swedish: {{t+|sv|fånga}}
 * Tajik: {{t|tg|капидан}}
+* Turkish: {{t+|tr|kapmak}}
 * Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}
 * Venetian: {{t|vec|ciapar}}
 * Welsh: {{t+|cy|dal}}
