--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -20,12 +20,14 @@
 * Danish: {{t+|da|hase}}
 * Finnish: {{t+|fi|kinnerjänne}}
 * French: {{t+|fr|ischio-jambier|m}}
-{{trans-mid}}
 * German: {{t|de|Hüftgelenkextensoren|m-p}}, {{t|de|ischiocrurale Muskulatur|f}}, {{t|de|rückseitige Oberschenkelmuskulatur|f}}
+{{trans-mid}}
+* Irish: {{t|ga|teannán ioscaide |m}}
 * Maori: {{t|mi|iohere kātete}}
 * Russian: {{t|ru|подколе́нное сухожи́лие|n}}, {{qualifier|colloquial}} {{t+|ru|поджи́лки|f-p}}
 * Swedish: {{t|sv|knäsena|c}}, {{t|sv|hassena|c}}
 * Tagalog: {{t|tl|litid sa alakalakan}}
+* Welsh: {{t|cy|llinyn y gar|m}}
 {{trans-bottom}}
 
 {{trans-see|biceps femoris}}
