I made it shorter to understand more <suck#48222781>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -1,7 +1,6 @@
 ==English==
 
-===Etymology===
-From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|ang|sūcan||to suck}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*sūkaną}}, {{m|gem-pro|*sūganą||to suck, suckle}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*seug-}}, {{m|ine-pro|*sug-}}, {{m|ine-pro|*suk-}}. Cognate with {{cog|sco|souke||to suck}}, obsolete {{cog|nl|zuiken||to suck}}. Akin also to {{cog|ang|sūgan||to suck}}, {{cog|fy|sûge}}, {{m|fy|sûgje||to suck}}, {{cog|nl|zuigen||to suck}}, {{etyl|de|-}} {{m|goh|saugen||to suck}}, {{cog|sv|suga||to suck}}, {{cog|is|sjúga||to suck}}, {{cog|la|sugō||suck}}, {{cog|cy|sugno||suck}}. Related to {{l|en|soak}}.
+So suck means to do a movement by going up and down like suck a dick bitch
 
 ===Pronunciation===
 * {{a|US}}, {{a|UK}} {{enPR|sŭk}}, {{IPA|/sʌk/|lang=en}}
