--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -72,6 +72,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * {{l|en|re-speak}}
 * {{l|en|unspeak}}
 * {{l|en|unspeakable}}
+* {{l|en|upspeak}}
 * {{l|en|withspeak}}
 
 '''phrasal verbs'''
