/* Chinese */ cat is mandatory! <坊#48224818>

--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -36,7 +36,9 @@
 
 ===Pronunciation 2===
 {{zh-pron
-|m=fāng,fáng,1nb=Taiwan,2nb=Mainland
+|m=fáng,fāng,1nb=Mainland,2nb=Taiwan
+|c=fong1
+|cat=n
 }}
 
 ====Definitions====
@@ -50,6 +52,7 @@
 |c=fong4
 |mc=1
 |oc=y,2
+|cat=n,v
 }}
 
 ====Definitions====
