--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -64,6 +64,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * {{l|en|forespeak}}
 * {{l|en|forspeak}}
 * {{l|en|forthspeak}}
+* {{l|en|misspeak}}
 * {{l|en|public speaking}}
 * {{l|en|speakable}}
 * {{l|en|speaker}}
