--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -38,6 +38,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 ====Derived terms====
 {{der2|lang=en
 | {{l|en|clear-cut}}
+| {{l|en|offcut}}
 | {{l|en|point-cut}}
 }}
 
