t+sco:[[kyth]] ([[WT:EDIT|Assisted]]) <come#48242619>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -319,6 +319,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Norwegian: {{t|no|ankomme}}, {{t+|no|komme}}
 * Persian: {{t+|fa|رسیدن|tr=ra(e)sidan|sc=fa-Arab}}
 * Portuguese: {{t+|pt|chegar}}
+* Scots: {{t|sco|kyth}}
 * Scottish Gaelic: {{t|gd|thig}}
 * Serbo-Croatian: {{t+|sh|doći}}
 * Sorbian:
