--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -191,6 +191,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 *: Mandarin: {{t+|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
 *: Min Dong: {{t|cdo|以色列|tr=Ī-sáik-liĕk|sc=Hani}}
 *: Min Nan: {{t|nan|以色列|tr=Í-sek-lia̍t}}, {{t|nan|I-su-la-el}}
+* Esperanto: {{t+|eo|Izrael}}, {{t|eo|Izraelo}}
 * Estonian: {{t+|et|Iisrael}}
 * French: {{t+|fr|Israël|m}}
 * German: {{t+|de|Israel}}
