--- a/en/坵/坵.13048.wikitext
+++ b/en/坵/坵.13048.wikitext
@@ -31,7 +31,11 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[きょう]] (kyō)|kun=[[おか]] (oka)}}
+* {{ja-readings
+|goon=く
+|kanon=きゅう<きう
+|kun=おか-
+}}
 
 ----
 
