--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -84,6 +84,11 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09|shin=仮}}
 
+# [[temporary]]
+# [[interim]]
+# [[assumed]] (name)
+# [[informal]]
+
 ====Readings====
 * {{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=[[かり]] (kari)}}
 
