--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,6 +1,7 @@
 ==English==
+[[Image:Flag of the United States.svg|right|thumb|250px|The flag of the '''United States of America''']]
+
 ===Pronunciation===
-[[Image:Flag of the United States.svg|thumb|376x376px|The flag of the '''United States of America''']]
 * {{audio|en-uk-United States of America.ogg|Audio (UK)|lang=en}}
 
 ===Proper noun===
