--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -58,16 +58,14 @@
 # [[shy]]
 
 ====Readings====
-* {{ja-readings
+{{ja-readings
 |goon=き<くゐ
 |kanon=き<くゐ
 |kun=はじ-る, はじ-らう, はずかし-める, とが-める
 }}
 
 ====Compounds====
-* [[愧死]]
-* [[愧色]]
-
+* {{ja-r|愧死|きし}}
 ----
 
 ==Korean==
