--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -73,7 +73,11 @@
 # {{defn|lang=ja|sort=土04}}
 
 ====Readings====
-* {{ja-readings|goon=[[ざ]] (za)|kanon=[[さ]] (sa)|kun=[[すわる]] (suwaru), [[そぞろに]] (sozoroni), [[おわす]] (owasu)}}
+{{ja-readings
+|goon=ざ
+|kanon=さ
+|kun=すわ-る, そぞろ-に, おわ-す
+}}
 
 ====Compounds====
 {{der-top|Compounds}}
