t+vi:[[đâm]] ([[WT:EDIT|Assisted]]) <stab#48271948>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -170,6 +170,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{m|gd|stob||to prick, to prod, t
 * Tagalog: {{t|tl|saksak}}
 * Thai: {{t+|th|แทง}}
 * Turkish: {{t+|tr|bıçaklamak}}, {{t+|tr|şişlemek}}
+* Vietnamese: {{t+|vi|đâm}}
 * Welsh: {{t+|cy|gwanu}}, {{t+|cy|trywanu}}
 * Westrobothnian: {{t|gmq-bot|såla}}
 * Yiddish: {{t|yi|שטעכן}}
