--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -207,8 +207,8 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Latvian: {{t+|lv|Vācija|f}}
 * Lezgi: {{t|lez|Германия|sc=Cyrl}}
 * Ligurian: {{t|lij|Germania|f}}
-{{trans-mid}}
 * Limburgish: {{t|li|Duutsjlandj}}, {{t|li|Duutsland}}
+{{trans-mid}}
 * Lingala: {{t|ln|Alémani}}
 * Lithuanian: {{t+|lt|Vokietija|f}}
 * Livonian: {{t|liv|Saksāmō}}
@@ -229,6 +229,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Marathi: {{t|mr|जर्मनी|sc=Deva}}
 * Marshallese: {{t|mh|Jāmne}}
 * Middle Persian: {{t|pal|𐭢𐭥𐭬𐭭𐭩𐭠}}
+* Mirandese: {{t|mwl|Almanha}}
 * Mongolian: {{t|mn|Герма́н|sc=Cyrl}}
 * Nahuatl: {{t+|nah|Teutontlālpan}}
 * Navajo: {{t|nv|Béésh Bichʼahii bikéyah}}
