--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -50,6 +50,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Hebrew: {{t|he|לדוגמה|tr=l'dugmá}}, {{t|he|למשל|tr=l'mashál}}
 * Hungarian: {{qualifier|[[például]]}} {{t|hu|[[pl.]]}}
 * Icelandic: {{t+|is|t.d.}} {{qualifier|{{t+|is|til dæmis}}}}
+* Ido: {{t+|io|exemple}}
 * Irish: {{t|ga|m.sh.}} {{q|{{t|ga|mar shampla}}}}
 * Italian: {{qualifier|[[ad esempio]]}} {{t|it|ad es.}}
 * Japanese: {{t+|ja|例えば|tr=tatoeba|sc=Jpan}}
