--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -181,6 +181,8 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * Hebrew: {{t+|he|חתך|m|tr=khétekh}}
 * Icelandic: {{t+|is|skurður|m}}
 * Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|برین}}
 {{trans-mid}}
 * Maori: {{t|mi|motunga}}
 * Portuguese: {{t+|pt|corte|m}}
