--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -144,7 +144,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Sundanese: {{t|su|tarung}}
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|strida}}, {{t+|sv|slåss}}, {{t+|sv|kämpa}}
-* Thai: {{t+|th|รบ}}
+* Thai: {{t+|th|สู้}}, {{t+|th|ต่อสู้}}, {{t+|th|รบ}}
 * Tibetan: {{t|bo|རྒྱ་འདྲེ|sc=Tibt}}
 * Tok Pisin: {{t|tpi|paitim}}
 * Turkish: {{t+|tr|savaşmak}}, {{t+|tr|dövüşmek}}
@@ -179,6 +179,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Russian: {{t+|ru|боро́ться|impf}}, {{t+|ru|сража́ться|impf}}
 * Spanish: {{t+|es|luchar}}
 * Swahili: {{t+|sw|vita}}
+* Thai: {{t+|th|สู้}}, {{t+|th|ต่อสู้}}
 {{trans-bottom}}
 
 {{trans-top|(transitive) to engage in (a physical conflict)}}
@@ -196,6 +197,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Russian: {{t+|ru|би́ться|impf}}, {{t+|ru|сража́ться|impf}}
 * Scottish Gaelic: {{t|gd|cog}}, {{t|gd|sabaid}}
 * Swahili: {{t+|sw|vita}}
+* Thai: {{t+|th|สู้}}, {{t+|th|ต่อสู้}}
 {{trans-bottom}}
 
 {{trans-top|(transitive) to contend in physical conflict against}}
@@ -238,6 +240,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Scottish Gaelic: {{t|gd|cog}}, {{t|gd|sabaid}}
 * Spanish: {{t+|es|combatir}}
 * Swahili: {{t+|sw|vita}}
+* Thai: {{t+|th|ต่อสู้}}
 * Tok Pisin: {{t|tpi|paitim}}
 * Ukrainian: {{t|uk|воюва́ти|impf|sc=Cyrl}}
 {{trans-bottom}}
@@ -268,6 +271,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Russian: {{t+|ru|би́ться|impf}}, {{t+|ru|сража́ться|impf}}
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|bekämpa}}
+* Thai: {{t+|th|ต่อสู้}}
 {{trans-bottom}}
 
 {{checktrans-top}}
