--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -182,6 +182,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Ottoman Turkish: {{t|ota|قورساق|tr=qursaq}}
 * Pashto: {{t|ps|معده|f|tr=me'dá}}, {{t|ps|ګېډه|f|tr=géḍa}}
 * Persian: {{t+|fa|معده|tr=me'de|sc=fa-Arab}}
+* Pitjantjatjara: {{t|pjt|tjuni kata}}
 * Polish: {{t+|pl|żołądek|m}}
 * Portuguese: {{t+|pt|estômago|m}}
 * Punjabi: {{t-needed|pa}}
@@ -309,6 +310,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Old Turkic: {{t|otk|𐰴𐰺𐰣|tr=qarïn}}
 * Pashto: {{t+|ps|خېټه|f|tr=xéṭa}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
+* Pitjantjatjara: {{t|pjt|tjuni}}
 * Polish: {{t+|pl|brzuch|m}}
 * Portuguese: {{t+|pt|barriga|f}}
 * Romanian: {{t+|ro|burtă|f}}
