--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -142,6 +142,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 | {{l|en|come what may}}
 | {{l|en|come with}}
 | {{l|en|come with the territory}}
+| {{l|en|downcome}}
 | {{l|en|forthcome}}
 | {{l|en|oncome}}
 | {{l|en|oncoming}}
