/* Etymology 3 */ spelling <port#48302421>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -319,7 +319,7 @@ Inherited from the {{inh|en|ang|port}}, from the {{der|en|la|porta||passage, gat
 {{trans-bottom}}
 
 ===Etymology 3===
-From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portare||carry}}. Akin to {{m|en|transport}}, {{m|en|portable}}.
+From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portāre||carry}}. Akin to {{m|en|transport}}, {{m|en|portable}}.
 
 ====Verb====
 {{en-verb}}
