t+gv:[[screeudeyr]] t-balance ([[WT:EDIT|Assisted]]) <secretary#48319469>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -136,6 +136,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 *: Kurmanji: {{t+|kmr|sekreter}}
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
+* Manx: {{t|gv|screeudeyr|m}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Romanian: {{t+|ro|secretar|m}}, {{t+|ro|secretară|f}}
 * Russian: {{t+|ru|мини́стр|m}}, {{t+|ru|секрета́рь|m}}
@@ -154,10 +155,11 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Finnish: {{t+|fi|sihteeri}}
 * German: {{t+|de|Sekretär|m}}
 * Greek: {{t+|el|γραμματέας|m|f}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|főtitkár}}
+{{trans-mid}}
 * Irish: {{t|ga|rúnaí|m}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
+* Manx: {{t|gv|screeudeyr|m}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
 * Serbo-Croatian: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
 {{trans-bottom}}
@@ -188,6 +190,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Hungarian: {{t|hu|kígyászkeselyű}}
 {{trans-mid}}
 * Irish: {{t|ga|rúnaí|m}}
+* Manx: {{t|gv|screeudeyr|m}}
 * Romanian: {{t|ro|pasăre secretar|f}}
 * Russian: {{t+|ru|пти́ца-секрета́рь|f}}
 * Spanish: {{t|es|serpentario|m}}
