--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -38,15 +38,15 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Arabic: {{t|ar|سِكْرِتِير|m|tr=sekretēr}}, {{t+|ar|سِكْرِتِيرَة|f|tr=sekretēra}}, {{t+|ar|كَاتِب|m}}, {{t|ar|كَاتِبَة|f}}
 * Armenian: {{t+|hy|քարտուղար}}, {{t+|hy|քարտուղարուհի}} {{qualifier|female}}
 * Azeri: {{t|az|katib}}, {{t|az|katibə}} {{qualifier|female}}
-* Bashkir: {{t|ba|сәркәтип|sc=Cyrl}}
+* Bashkir: {{t|ba|сәркәтип}}
 * Basque: {{t|eu|idazkari}}
-* Belarusian: {{t|be|сакрата́р|m|sc=Cyrl}}, {{t|be|сакрата́рка|f|sc=Cyrl}}
-* Bengali: {{t|bn|সম্পাদক|sc=Beng}}
-* Bulgarian: {{t+|bg|секрета́р|m|tr=sekretár}}, {{t|bg|секрета́рка|f|tr=sekretárka}}
-* Burmese: {{t+|my|စက္ကရီတေရီ|sc=Mymr}}
-* Chechen: {{t|ce|йозанча|sc=Cyrl}}
+* Belarusian: {{t|be|сакрата́р|m}}, {{t|be|сакрата́рка|f}}
+* Bengali: {{t|bn|সম্পাদক}}
+* Bulgarian: {{t+|bg|секрета́р|m}}, {{t|bg|секрета́рка|f}}
+* Burmese: {{t+|my|စက္ကရီတေရီ}}
+* Chechen: {{t|ce|йозанча}}
 * Chinese:
-*: Mandarin: {{t+|cmn|秘書|sc=Hani}}, {{t+|cmn|秘书|tr=mìshū|sc=Hani}}
+*: Mandarin: {{t+|cmn|秘書}}, {{t+|cmn|秘书|tr=mìshū}}
 * Czech: {{t|cs|sekretář|m}}, {{t+|cs|sekretářka|f}}
 * Danish: {{t|da|sekretær|c}}
 * Dutch: {{t+|nl|secretaresse|f}}, {{t+|nl|secretaris|m}}
@@ -58,7 +58,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * German: {{t+|de|Sekretär|m}}, {{t+|de|Sekretärin|f}}
 * Greek: {{t+|el|γραμματέας|m|f}}
 * Hebrew: {{t|he|מַזְכִּיר|m|tr=mazkir}}, {{t|he|מַזְכִּירָה|f|tr=mazkira}}
-* Hindi: {{t+|hi|सचिव|m|sc=Deva}}
+* Hindi: {{t+|hi|सचिव|m}}
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
 * Icelandic: {{t|is|ritari|m}}
 * Ido: {{t+|io|sekretario}}
@@ -67,47 +67,44 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Irish: {{t|ga|rúnaí|m}}
 * Italian: {{t+|it|segretario|m}}
 * Japanese: {{t+|ja|秘書|tr=ひしょ, hisho}}
-* Kazakh: {{t|kk|хатшы|sc=Cyrl}}
-* Khmer: {{t+|km|ស្មៀន|sc=Khmr|tr=smien}}
+* Kazakh: {{t|kk|хатшы}}
+* Khmer: {{t+|km|ស្មៀន|tr=smien}}
 * Korean: {{t+|ko|비서}} ({{t+|ko|秘書}})
-* Kurdish:
-*: Kurmanji: {{t+|kmr|katib}}, {{t+|kmr|sekreter}}
-*: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
 {{trans-mid}}
-* Kyrgyz: {{t+|ky|катчы|sc=Cyrl}}, {{t+|ky|секретарь|sc=Cyrl}}
-* Lao: {{t|lo|ເລຂານຸການ|sc=Laoo}}
+* Kyrgyz: {{t+|ky|катчы}}, {{t+|ky|секретарь}}
+* Lao: {{t|lo|ເລຂານຸການ}}
 * Latin: {{t|la|sēcrētārius|m}} {{qualifier|Mediaeval}}, {{t|la|librarius}}, {{t|la|librariolus|m}}, {{t|la|librarius|m}}
 * Latvian: {{t|lv|sekretārs|m}}
 * Lithuanian: {{t+|lt|sekretorius|m}}
-* Macedonian: {{t|mk|секретар|m|sc=Cyrl}}, {{t|mk|секретарка|f|sc=Cyrl}}
+* Macedonian: {{t|mk|секретар|m}}, {{t|mk|секретарка|f}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Manx: {{t|gv|screeudeyr|m}}
-* Navajo: {{t|nv|naaltsoos ííłʼíní}}
+* Navajo: {{t|nv|naaltsoos ííłʼíní|sc=Latn}}
 * Norwegian:
 *: Bokmål: {{t+|nb|sekretær|m}}
-* Persian: {{t+|fa|سکرتر|tr=sekreter|sc=fa-Arab}}, {{t+|fa|کاتب|tr=kâteb|sc=fa-Arab}}
+* Persian: {{t+|fa|سکرتر|tr=sekreter}}, {{t+|fa|کاتب|tr=kâteb}}
 * Polish: {{t+|pl|sekretarz|m}}, {{t+|pl|sekretarka|f}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Romanian: {{t+|ro|secretar|m}}, {{t+|ro|secretară|f}}
 * Russian: {{t+|ru|секрета́рь|m|f}}, {{t+|ru|секрета́рша|f}} {{qualifier|colloquial for female}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}, {{t|gd|clèireach|m}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|секретар|m}}, {{t|sh|секретарица|f}}, {{t|sh|тајник|m}} {{qualifier|Bosnia, Croatia}}, {{t|sh|тајница|f}} {{qualifier|Bosnia, Croatia}}
-*: Roman: {{t+|sh|sekretar|m}}, {{t+|sh|sekretarica|f}}, {{t+|sh|tajnik|m}} {{qualifier|Bosnia, Croatia}}, {{t+|sh|tajnica|f}} {{qualifier|Bosnia, Croatia}}
+*: Cyrillic: {{t|sh|секрѐта̄р|m}}, {{t|sh|секрета̀рица|f}}, {{t|sh|та̑јнӣк|m}} {{q|Bosnia, Croatia}}, {{t|sh|та̑јница|f}} {{q|Bosnia, Croatia}}
+*: Roman: {{t+|sh|sekrètār|m}}, {{t+|sh|sekretàrica|f}}, {{t+|sh|tȃjnīk|m}} {{q|Bosnia, Croatia}}, {{t+|sh|tȃjnica|f}} {{q|Bosnia, Croatia}}
 * Slovak: {{t|sk|sekretár|m}}, {{t|sk|sekretárka|f}}
 * Slovene: {{t|sl|sekretar|m}}, {{t|sl|sekretarka|f}}, {{t+|sl|tajnik|m}}, {{t|sl|tajnica|f}}
-* Southern Altai: {{t|alt|качы|tr=kaçı|sc=Cyrl}}
+* Southern Altai: {{t|alt|качы}}
 * Spanish: {{t+|es|secretario|m}}, {{t+|es|secretaria|f}}
 * Swahili: {{t+|sw|karani}}
 * Swedish: {{t+|sv|sekreterare|c}}
 * Tagalog: {{t|tl|sekretarya}}, {{t|tl|kalihim}}
 * Tajik: {{t|tg|котиб}}, {{t+|tg|котиба}} {{qualifier|female}}
-* Telugu: {{t+|te|కార్యదర్శి|sc=Telu}}, {{t|te|సహాయకుడు|sc=Telu}}
+* Telugu: {{t+|te|కార్యదర్శి}}, {{t|te|సహాయకుడు}}
 * Thai: {{t|th|เลขานุการ}}
 * Tok Pisin: {{t|tpi|sekreteri}}
 * Turkish: {{t+|tr|sekreter}}
 * Turkmen: {{t|tk|sekretar}}
-* Ukrainian: {{t|uk|секрета́р|m|sc=Cyrl}}, {{t|uk|секрета́рка|f|sc=Cyrl}}
+* Ukrainian: {{t|uk|секрета́р|m}}, {{t|uk|секрета́рка|f}}
 * Uzbek: {{t+|uz|sekretar}}, {{t+|uz|kotib}}
 * Vietnamese: {{t+|vi|thư ký}}, {{t+|vi|bí thư}}
 * Volapük: {{t+|vo|sekretan}}
@@ -118,7 +115,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 {{trans-top|head of a department of government}}
 * Armenian: {{t+|hy|քարտուղար}}
 * Chinese:
-*: Mandarin: {{t+|cmn|大臣|tr=dàchén|sc=Hani}}
+*: Mandarin: {{t+|cmn|大臣|tr=dàchén}}
 * Czech: {{t+|cs|ministr|m}}
 * Danish: {{t+|da|minister|c}}
 * Esperanto: {{t|eo|sekretario}}
@@ -132,20 +129,18 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Irish: {{t|ga|rúnaí|m}}
 * Japanese: {{t+|ja|大臣|tr=だいじん, daijin}}, {{t+|ja|長官|tr=ちょうかん, chōkan}}
 {{trans-mid}}
-* Kurdish:
-*: Kurmanji: {{t+|kmr|sekreter}}
-*: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Manx: {{t|gv|screeudeyr|m}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Romanian: {{t+|ro|secretar|m}}, {{t+|ro|secretară|f}}
 * Russian: {{t+|ru|мини́стр|m}}, {{t+|ru|секрета́рь|m}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
-* Serbo-Croatian: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
+* Serbo-Croatian:
+*: Roman: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
 * Spanish: {{t+|es|secretario|m}}
 * Swedish: {{t+|sv|minister|c}}
 * Tagalog: {{t|tl|kalihim}}
-* Telugu: {{t+|te|కార్యదర్శి|tr=kaaryadarSi|sc=Telu}}
+* Telugu: {{t+|te|కార్యదర్శి}}
 * Tok Pisin: {{t|tpi|sekreteri}}
 {{trans-bottom}}
 
@@ -161,7 +156,8 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Manx: {{t|gv|screeudeyr|m}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
-* Serbo-Croatian: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
+* Serbo-Croatian:
+*: Roman: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
 {{trans-bottom}}
 
 {{trans-top|type of desk}}
@@ -174,8 +170,6 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Interlingua: {{t|ia|bureau}}
 {{trans-mid}}
 * Italian: {{t+|it|scrittoio|m}}
-* Kurdish:
-*: Kurmanji: {{t+|kmr|sekreter}}
 * Portuguese: {{t+|pt|escrivaninha|f}}, {{t+|pt|secretária|f}}, {{qualifier|portugal}} {{t+|pt|secretária}}
 * Romanian: {{t+|ro|secretar|m}}
 * Russian: {{t+|ru|секрете́р|m|tr=sekretɛ́r}}
