--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -70,6 +70,9 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Kazakh: {{t|kk|хатшы}}
 * Khmer: {{t+|km|ស្មៀន|tr=smien}}
 * Korean: {{t+|ko|비서}} ({{t+|ko|秘書}})
+* Kurdish:
+*: Central Kurdish: {{t|ckb|سکرتێر|tr=sikirtaer}}
+*: Northern Kurdish: {{t+|kmr|katib}}, {{t+|kmr|sekreter}}
 {{trans-mid}}
 * Kyrgyz: {{t+|ky|катчы}}, {{t+|ky|секретарь}}
 * Lao: {{t|lo|ເລຂານຸການ}}
@@ -128,6 +131,9 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Interlingua: {{t|ia|secretaria|f}}
 * Irish: {{t|ga|rúnaí|m}}
 * Japanese: {{t+|ja|大臣|tr=だいじん, daijin}}, {{t+|ja|長官|tr=ちょうかん, chōkan}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|سکرتێر|tr=sikirtaer}}
+*: Northern Kurdish: {{t+|kmr|sekreter}}
 {{trans-mid}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Manx: {{t|gv|screeudeyr|m}}
@@ -136,6 +142,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Russian: {{t+|ru|мини́стр|m}}, {{t+|ru|секрета́рь|m}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
 * Serbo-Croatian:
+*: Cyrillic: {{t|sh|та̑јнӣк|m}}, {{t|sh|та̑јница|f}}
 *: Roman: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
 * Spanish: {{t+|es|secretario|m}}
 * Swedish: {{t+|sv|minister|c}}
@@ -151,12 +158,13 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * German: {{t+|de|Sekretär|m}}
 * Greek: {{t+|el|γραμματέας|m|f}}
 * Hungarian: {{t+|hu|főtitkár}}
-{{trans-mid}}
 * Irish: {{t|ga|rúnaí|m}}
+{{trans-mid}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Manx: {{t|gv|screeudeyr|m}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
 * Serbo-Croatian:
+*: Cyrillic: {{t|sh|та̑јнӣк|m}}, {{t|sh|та̑јница|f}}
 *: Roman: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
 {{trans-bottom}}
 
@@ -170,6 +178,8 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Interlingua: {{t|ia|bureau}}
 {{trans-mid}}
 * Italian: {{t+|it|scrittoio|m}}
+* Kurdish:
+*: Northern Kurdish: {{t+|kmr|sekreter}}
 * Portuguese: {{t+|pt|escrivaninha|f}}, {{t+|pt|secretária|f}}, {{qualifier|portugal}} {{t+|pt|secretária}}
 * Romanian: {{t+|ro|secretar|m}}
 * Russian: {{t+|ru|секрете́р|m|tr=sekretɛ́r}}
