--- a/en/偖/偖.11110.wikitext
+++ b/en/偖/偖.11110.wikitext
@@ -21,7 +21,11 @@
 # {{defn|lang=ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[しゃ]] (sha)|kun=[[さて]] (sate)}}
+* {{ja-readings
+|goon=しゃ
+|kanon=しゃ
+|kun=さて-
+}}
 
 ----
 
