--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -53,7 +53,7 @@ From {{och-l|移|to change; to alter}} + k-extension ({{zh-ref|Schuessler, 2007}
 
 ===Etymology 2===
 {{zh-forms}}
-From {{inh|zh|sit-pro|*lwa(ː)y||easy}}. Cognate with {{cog|my|လွယ်||easy}}.
+From {{inh|zh|sit-pro|*lwa(ː)j||easy}}. Cognate with {{cog|my|လွယ်||easy}}.
 
 ====Pronunciation====
 {{zh-pron
