--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -19,8 +19,9 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 {{en-verb|fights|fighting|fought|fought|past_ptc2=foughten|past_ptc2_qual=archaic}}
 
 # {{lb|en|intransitive}} To [[contend]] in physical conflict, either singly or in war, battle etc.
-#: {{ux|en|The two boxers have been '''fighting''' for more than half an hour.}}
 #: {{ux|en|A wounded animal will '''fight''' like a maniac, relentless, savage and murderous.}}
+# {{lb|sv|reciprocal}} To [[contend]] in physical conflict with each other, either singly or in war, battle etc.
+#: {{ux|en|The two boxers have been '''fighting''' for more than half an hour.}}
 # {{lb|en|intransitive}} To [[strive]] for; to campaign or [[contend]] for success.
 #: {{ux|en|He '''fought''' for the Democrats in the last election.}}
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=7
@@ -157,6 +158,11 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Yakut: {{t|sah|охсуо|sc=Cyrl}}
 * Yiddish: {{t|yi|קעמפֿן|tr=kemfn|sc=Hebr}}
 * Zhuang: {{t-needed|za}}
+{{trans-bottom}}
+
+{{trans-top|(reciprocal) to contend in physical conflict with each other}}
+* Swedish: {{t+|sv|slåss}}
+{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|to strive for}}
