--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -13,7 +13,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 
 ====Noun====
 {{wikipedia}}
-{{en-noun|-}}
+{{en-noun|~}}
 
 # A [[cloth]] or stuff made of [[mat]]ted [[fibre]]s of [[wool]], or wool and [[fur]], [[full]]ed or wrought into a compact substance by rolling and pressure, with lees or size, without spinning or weaving.
 #* Shakespeare, ''King Lear'', act 4, scene 6:
