t+qu:[[khuchuy]] ([[WT:EDIT|Assisted]]) <cut#48337521>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -535,6 +535,7 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * Persian: {{t+|fa|بریدن|tr=boridan}}
 * Polish: {{t+|pl|ciąć|impf}}
 * Portuguese: {{t+|pt|cortar}}, {{t|pt|incisar}}
+* Quechua: {{t|qu|khuchuy}}
 * Rapa Nui: {{t|rap|tarai}}
 * Romanian: {{t+|ro|tăia|alt=a tăia}}
 * Romansch: {{t|rm|tagliar}}, {{t|rm|taglier}}, {{t|rm|tagler}}
