--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -385,7 +385,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}
 * Venetian: {{t|vec|ciapar}}
 * Welsh: {{t+|cy|dal}}
-* Yagnobi: {{t|tg|капак|tr=kapak}}
+* Yagnobi: {{t|yai|капак|tr=kapak}}
 * Yiddish: {{t|yi|כאַפּן}}
 {{trans-bottom}}
 
