--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -38,7 +38,7 @@ From {{der|en|la|curvus|t=bent, curved}}.
 # {{lb|en|informal|usually in plural}} The attractive shape of a woman's body.
 
 ====Derived terms====
-{{der4|title=terms derived from curve (noun)|algebraic curve|Bézier curve|closed curve|cosine curve|curvaceous|curvy|dragon curve|elliptic curve|learning curve|Lissajous curve|Jordan curve|multicurve|nonsimple curve|open curve|pedal curve|plane curve|pursuit curve|simple curve|sine curve|space curve|spherical curve|lang=en}}
+{{der4|title=terms derived from curve (noun)|algebraic curve|Bézier curve|closed curve|cosine curve|curvaceous|curvy|dragon curve|elliptic curve|learning curve|Lissajous curve|Jordan curve|multicurve|nonsimple curve|open curve|pedal curve|plane curve|pursuit curve|simple curve|sine curve|space curve|spherical curve|throw a curve|throw someone a curve|lang=en}}
 
 ====Translations====
 {{trans-top|gentle bend}}
