--- a/en/昿/昿.17000.wikitext
+++ b/en/昿/昿.17000.wikitext
@@ -34,7 +34,11 @@ The component [[廣]] is sometimes written [[広]] in {{w|Chinese calligraphy}} 
 # {{defn|lang=ja|sort=日05}}
 
 ====Readings====
-* {{ja-readings|on=[[こう]] (kō)|kun=[[あきらか]] (akiraka), [[むなしい]] (munashii)}}
+{{ja-readings
+|goon=こう<くわう
+|kanon=こう<くわう
+|kun=あら-, あき-らか, むな-し.い, ひろ-い
+}}
 
 ===Usage notes===
 This is an {{w|extended shinjitai}} character added to {{w|JIS X 0208}} in 1990.
