--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -140,6 +140,7 @@ From {{inh|en|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|cote}}, {{m|fro|co
 * French: {{t+|fr|couche|f}}
 * German: {{t+|de|Beschichtung|f}}
 * Greek: {{t+|el|επικάλυμμα|n|sc=Grek}}, {{qualifier|paint}} {{t+|el|στρώση|f|sc=Grek}}, {{t+|el|επίχρισμα|n|sc=Grek}}
+* Ido: {{t+|io|induto}}, {{t+|io|induturo}}
 * Irish: {{t|ga|brat|m}}, {{t|ga|cóta|m}}
 {{trans-mid}}
 * Italian: {{t+|it|rivestimento|m}}
