--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -25,7 +25,7 @@
 : From {{inh|zh|sit-pro|*(g/k)əw-n||elder brother; senior male relative}}; cognate with {{och-l|舅|maternal uncle}} ({{zh-ref|Benedict, 1972}}; STEDT).
 : Alternatively, it may be related to Middle {{cog|mnw||ko²|elder brother}}, with nominal suffix ''-n'' added ({{zh-ref|Schuessler, 2007}}).
 ; “descendants; later”
-: Perhaps from {{bor|zh|mkh-pro|*kuun||child}} ({{zh-ref|Schuessler, 2007}}). Cognate with Min {{zh-l|*囝|child}}.
+: Perhaps from {{bor|zh|mkh-pro|*kuun||child}}; cognate with Min {{zh-l|*囝|son; child}} ({{zh-ref|Schuessler, 2007}}).
 ; “many; numerous”
 : From {{inh|zh|sit-pro|*m-kul||twenty; all}}; cognate with {{och-l|群|herd; all}} ({{zh-ref|Schuessler, 2007}}; STEDT).
 
