--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -30,7 +30,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[tired]]; [[weary]]
+#: {{zh-x|疲倦|exhausted; fatigued}}
+#: {{zh-x|厭倦|fed up; bored}}
+#* {{zh-x|^子 曰：「默 而 識 之，學 而 不 厭，誨 人 不 倦，何 有 於 我 哉？」|The Master said, "The silent treasuring up of knowledge; learning without satiety; and instructing others without being '''wearied''' - which one of these things belongs to me?"|ref=Analects}}
 
 ====Compounds====
 {{zh-der|不倦|乏倦|亹亹不倦|倦乏|倦勤|倦容|倦怠|倦意|倦游|倦累|倦色|倦遊|倦飛|倦鳥知返|力學不倦|勞倦|厭倦|困倦|好學不倦|娓娓不倦|孜孜不倦|孳孳不倦|怠倦|悶倦|拘倦|朝夕不倦|樂善不倦|樂此不倦|猒倦|疲倦|睏倦|終日不倦|誨人不倦|誨而不倦|諄諄不倦|鞍馬勞倦}}
