--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -41,7 +41,7 @@
 ==French==
 
 ===Etymology===
-From {{inh|fr|fro|chose}}, from {{der|fr|la|causa}}. Compare {{cog|it|cosa}}, {{cog|pt|coisa}}, {{cog|es|cosa}} among many others.
+From {{inh|fr|fro|chose}}, from {{inh|fr|la|causa}}. Compare {{cog|it|cosa}}, {{cog|pt|coisa}}, {{cog|es|cosa}} among many others. Compare {{doublet|lang=fr|notext=1|cause}}, a borrowed doublet.
 
 ===Pronunciation===
 * {{fr-IPA}}
@@ -71,10 +71,16 @@ From {{inh|fr|fro|chose}}, from {{der|fr|la|causa}}. Compare {{cog|it|cosa}}, {{
 
 ==Middle French==
 
+===Etymology===
+From {{inh|frm|fro|chose}}, {{m|fro|cose}}.
+
 ===Noun===
 {{frm-noun|f}}
 
 # [[thing]]
+
+====Descendants====
+* French: {{l|fr|chose}}
 
 ----
 
@@ -103,7 +109,7 @@ From {{inh|fr|fro|chose}}, from {{der|fr|la|causa}}. Compare {{cog|it|cosa}}, {{
 * {{l|fro|cose}} {{qualifier|chiefly Old Northern French}}
 
 ===Etymology===
-{{etyl|la|fro}} {{m|la|causa}}.
+Inherited from {{inh|fro|la|causa}}. Compare {{m|fro|cause}}.
 
 ===Pronunciation===
 * {{IPA|/ˈtʃɔ.zə/|lang=fro}}<!--would make sense anyway-->
