--- a/en/惶/惶.15627.wikitext
+++ b/en/惶/惶.15627.wikitext
@@ -52,7 +52,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
 
-# {{defn|lang=ja|sort=心09}}
+# be anxious
+# [[fear]]
 
 ====Readings====
 * {{ja-readings
