--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -29,7 +29,7 @@ From {{etyl|enm|en}} {{m|enm|clingen}}, {{etyl|ang|en}} {{m|ang|clingan||to adhe
 #* Jonathan Swift
 #*: I '''clung''' legs as close to his side as I could.
 # {{lb|en|transitive}} To cause to dry up or wither.
-#* Shakespeare
+#* c. '''1606''', {{w|William Shakespeare}}, “The Tragedie of Macbeth”, Act V, scene v
 #*: If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.
 # {{lb|en|figurative|with preposition to}} to [[be fond of]], to [[feel]] strongly about
 
