--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -595,7 +595,11 @@ From {{inh|fr|fro|port}}, from {{inh|fr|la|portus}}, from {{inh|fr|itc-pro|*port
 
 ==Icelandic==
 
+===Etymology===
+Ultimately from {{der|is|la|porta}}.
+
 ===Pronunciation===
+* {{IPA|/pʰɔr̥t/|lang=is}}
 * {{rhymes|ɔr̥t|lang=is}}
 
 ===Noun===
@@ -607,7 +611,7 @@ From {{inh|fr|fro|port}}, from {{inh|fr|la|portus}}, from {{inh|fr|itc-pro|*port
 {{is-decl-noun-n-s|p|o|rt}}
 
 ====Synonyms====
-* {{l|is|hlið}}
+* {{sense|gate}} {{l|is|hlið}}
 
 ----
 
