--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -150,7 +150,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Latgalian: {{t|ltg|kaitavuot}}
 * Latin: {{t|la|lūdō}}
 * Latvian: {{t|lv|spēlēt}}
-* Ligurian: {{t|lij|zugâ}}, {{t|lij|zeugâ}}
+* Ligurian: {{t|lij|zugâ}}
 * Lingala: {{t|ln|kosakana}}
 {{trans-mid}}
 * Lithuanian: {{t+|lt|žaisti}}
