--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -9,7 +9,8 @@
 From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|specan||to speak}}, alteration of earlier {{m|ang|sprecan||to speak}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*sprekaną||to speak, make a sound}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*spreg-||to make a sound, utter, speak}}. Cognate with West Frisian {{m|fy|sprekke}}, Low German {{m|nds|spreken||to speak}}, Dutch {{m|nl|spreken||to speak}}, German {{m|de|sprechen||to speak}}, Swedish {{m|sv|språk||language}} and also with Albanian {{m|sq|shpreh||to utter, voice, express}} through Indo-European.
 
 ===Pronunciation===
-* {{enPR|spēk}}, {{IPA|/spiːk/|lang=en}}
+* {{a|RP}} {{IPA|/spiːk/|lang=en}}
+* {{a|GA}} {{enPR|spēk}}, {{IPA|/spik/|lang=en}}
 * {{audio|en-us-speak.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-to speak.ogg|Audio (UK)|lang=en}}
 * {{rhymes|iːk|lang=en}}
