/* Derived terms */ <plum#48416646>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -53,10 +53,12 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 =====Derived terms=====
 {{rel-top4|derived terms (types of fruit trees associated with places)}}
 * {{l|en|American black plum}}
+* {{l|en|American wild plum}}
 * {{l|en|Assyrian plum}}
 * {{l|en|Australian plum}}
 * {{l|en|Brazilian plum}}
 * {{l|en|Canada plum}}
+* {{l|en|Chinese plum}}
 * {{l|en|Darling plum}}
 {{rel-mid4}}
 * {{l|en|East Indian plum}}
@@ -73,13 +75,14 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{l|en|Queensland plum}}
 * {{l|en|Satsuma plum}}
 {{rel-mid4}}
+* {{l|en|Sierra plum}}
 * {{l|en|Spanish plum}}
 * {{l|en|Tasmanian plum}}
-* {{l|en|Victoria plum}}
 * {{l|en|yellow Spanish plum}}
 {{rel-bottom}}
 {{rel-top4|other derived terms}}
 * {{l|en|apple-plum}}
+* {{l|en|aprium}}
 * {{l|en|beach plum}}, {{l|en|beach-plum}}
 * {{l|en|black plum of Illawarra}}
 * {{l|en|blood plum}}
@@ -89,6 +92,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{l|en|cocoa plum}}, {{l|en|coco plum}}, {{l|en|cocoplum}}
 * {{l|en|damascene plum}}, {{l|en|damask plum}}, {{l|en|damson plum}}
 * {{l|en|date plum}}, {{l|en|date-plum}}
+* {{l|en|doveplum}}
 * {{l|en|dried plum}}<!--US advertisers' term for "prune", used with the intention of avoiding the negative connotations of that word-->
 * {{l|en|gingerbread plum}}
 * {{l|en|golden plum}}
@@ -99,21 +103,28 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{l|en|horse-plum}}
 * {{l|en|leaf curling plum aphid}}
 {{rel-mid4}}
+* {{l|en|maiden plum}}
 * {{l|en|marmalade plum}}
 * {{l|en|mirabelle plum}}
+* {{l|en|mobola plum}}
 * {{l|en|mountain plum}}
 * {{l|en|muscle plum}}
 * {{l|en|mussel plum}}
 * {{l|en|myrobalan plum}}, {{l|en|myrobella plum}}
 * {{l|en|olive-plum}}
+* {{l|en|nectaplum}}
 * {{l|en|partridge plum}}
+* {{l|en|pear-plum}}
+* {{l|en|pear-plum}}
 * {{l|en|pear-plum}}
 * {{l|en|persimmon-plum}}
 * {{l|en|pigeon-plum}}
 * {{l|en|plum blossom}}
 * {{l|en|plum brandy}}
 * {{l|en|plum curculio}}
+* {{l|en|plum gouger}}
 * {{l|en|plum peach}}
+* {{l|en|plum pine}}
 * {{l|en|plum pox}}
 * {{l|en|plum pudding}}, {{l|en|plum-pudding}}
 * {{l|en|plum rains}}
@@ -123,6 +134,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{l|en|plum tree}}
 * {{l|en|plum weevil}}
 * {{l|en|plum wine}}
+* {{l|en|plum yew}}
 * {{l|en|plum-bird}}, {{l|en|plum bird}}
 * {{l|en|plum-blossom}}
 * {{l|en|plum-broth}}
@@ -148,11 +160,13 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{l|en|pluot}}
 * {{l|en|sapodilla plum}}
 * {{l|en|sebesten plum}}
+* {{l|en|shore plum}}
 * {{l|en|slugplum}}
 * {{l|en|sugar plum}}, {{l|en|sugar-plum}}, {{l|en|sugarplum}}
 * {{l|en|tamarind plum}}
 * the [[bloom of the plum]], the [[blue of the plum]]
 * {{l|en|urucuri plum}}
+* {{l|en|Victoria plum}}
 * {{l|en|wheat-plum}}
 * {{l|en|wild plum}}
 * {{l|en|yellow plum}}
