--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -121,13 +121,13 @@ Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ||st
 
 # a {{l|en|star}}
 #: {{ja-usex|数え切れないくらいたくさんの'''星'''が輝いている|かぞえきれない くらい たくさん の '''ほし''' が かがやいて いる|an endless number of '''stars''' are shining}}
-#* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lang|ja|ニクスへの旅}}|chapter={{ruby|{{lang|ja|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}}}|trans-chapter=Leonin Iconoclast|||{{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The stars belong in the night sky. This is our world. And we take matters into our own hands.”}}|trans-title=Journey into Nyx|language=Japanese}}
+#* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lang|ja|ニクスへの旅}}|chapter={{ruby|{{lang|ja|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}}}|trans-chapter=Leonin Iconoclast|||{{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The '''stars''' belong in the night sky. This is our world. And we take matters into our own hands.”}}|trans-title=Journey into Nyx|language=Japanese}}
 # {{lb|ja|sort=ほし|tarot}} the {{l|en|star|Star}}
 # {{lb|ja|loosely}} a {{l|en|planet}}
 #* {{quote-book||
 |{{ruby|{{w2|ja|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)|sc=Jpan}}}}
 ||181–183
-|{{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea Planet ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind Planet. Sailor Uranus enters the scene!}}
+|{{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea '''Planet''' ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind '''Planet'''. Sailor Uranus enters the scene!}}
 |last=Takeuchi
 |first=Naoko
 |authorlink=Naoko Takeuchi
@@ -143,44 +143,6 @@ Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ||st
 |origdate=Jan 23 2004
 |volume=6
 |isbn=4-06-334835-0}}
-#*{{quote-book||
-|{{ruby|{{w2|ja|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)|sc=Jpan}}}}
-||67
-|{{ja-usex|——そして　冥%界の'''星'''冥%王%星を守%護にもつセーラープルート|——^そして　^めい%かい の '''^ほし''' ^めい%おう%せい を しゅ%ご に もつ ^セーラー ^プルート|——And I am Sailor Pluto, keeper of Pluto the Underworld Planet}}
-|last=Takeuchi
-|first=Naoko
-|authorlink=Naoko Takeuchi
-|chapter={{ruby|{{lang|ja|[Act](アクト) [32](サーティツー)　[無](む)[限](げん)[６](シックス)　３[戦](せん)[士](し)}}}}
-|trans-chapter=Act 32: Infinity 6: 3 Warriors
-|trans-title={{w|Sailor Moon|Pretty Guardian SAILOR MOON}}
-|genre=fiction
-|language=Japanese
-|edition=5th
-|location=Tokyo
-|publisher=Kodansha
-|date=Feb 13 2009
-|origdate=Feb 23 2004
-|volume=7
-|isbn=4-06-334842-3}}
-#* {{quote-book||
-|{{ruby|{{w2|ja|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)|sc=Jpan}}}}
-||88–89
-|{{ja-usex|——わたしは死の淵よりの使%者　破%滅の'''星'''土%星を守%護に持つ沈%黙の戦%士セーラーサターン|——^わたし は し の ふち より の し%しゃ　^は%めつ の '''^ほし''' ^ど%せい を しゅ%ご に もつ ちん%もく の せん%し ^セーラー ^サターン|——I am the messenger from the depths of death, the keeper of Saturn the Devastation Planet, the silent warrior, Sailor Saturn}}
-|last=Takeuchi
-|first=Naoko
-|authorlink=Naoko Takeuchi
-|chapter={{ruby|{{lang|ja|[Act](アクト) [37](サーティセブン)　[無](む)[限](げん)[11](イレブン)　[無](む)[限](げん)[大](だい)}}}}——{{ruby|{{lang|ja|[審](しん)[判](ぱん)}}}}
-|trans-chapter=Act 37: Infinity 11: Infinity——Judgment
-|trans-title={{w|Sailor Moon|Pretty Guardian SAILOR MOON}}
-|genre=fiction
-|language=Japanese
-|edition=5th
-|location=Tokyo
-|publisher=Kodansha
-|date=Feb 13 2009
-|origdate=Mar 23 2004
-|volume=8
-|isbn=4-06-334857-1}}
 
 =====Derived terms=====
 {{der-top}}
@@ -202,7 +164,7 @@ Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ||st
 
 From {{der|ja|ltc|sort=せい|星|tr={{IPAchar|/seŋ/}}||star}}.
 
-The {{m|en|Singapore}} sense derives from the pre-{{l|en|World War Two}} kanji spelling {{l|ja|星加坡}} (modern kanji spelling {{l|ja|新加坡}}) as borrowed from {{bor|ja|zh|-}}, itself a {{l|en|transliteration}} of {{cog|ms|Singapura}}.
+The {{m|en|Singapore}} sense derives from the pre-{{l|en|World War Two}} kanji spelling {{l|ja|星加坡}} (modern kanji spelling {{l|ja|新加坡}}) as borrowed from {{bor|ja|zh|sort=せい|-}}, itself a {{l|en|transliteration}} of {{cog|ms|Singapura}}.
 
 ====Pronunciation====
 {{ja-pron|yomi=kanon|せい|acc=1|acc_ref=DJR}}
@@ -222,7 +184,7 @@ The {{m|en|Singapore}} sense derives from the pre-{{l|en|World War Two}} kanji s
 #* {{quote-book|genre=fiction|||first=Mitsuru
 |last=Adachi
 |authorlink=Mitsuru Adachi|{{wj|ショートプログラム (漫画)|[SHORT PROGRAM](ショート・プログラム)}}
-|trans-title={{w|Short Program (manga)|SHORT PROGRAM}}|location=Tokyo|publisher=Shogakukan|date=Feb 20 1996|edition=25th|origdate=Feb 15 1988|isbn=4-09-121881-4|volume=1||256|chapter={{lj|なにがなんだか 前編}}|trans-chapter=What’s What: First Chapter|{{ja-usex|——あ、わたくしマキシムＡＧＦです。リプトン'''星'''からやってまいりました。地%球の寒さにおどろいてます。どぞよろしく。|——あ、わたくしマキシムＡＧＦです。リプトン'''せい'''からやってまいりました。ち%きゅうのさむさにおどろいてます。どぞよろしく。|——Oh, my name is {{w|lang=ja|味の素AGF|Maxim AGF}}. I came here from planet {{w|Lipton}}. I’m still taken aback by Earth’s coldness. It is a pleasure to meet all of you.|rom=——A, watakushi Makishimu Ējīefu desu. Riputon'''-sei''' kara yatte mairimashita. Chikyū no samusa ni odoroitemasu. Dozo yoroshiku.}}|language=Japanese}}
+|trans-title={{w|Short Program (manga)|SHORT PROGRAM}}|location=Tokyo|publisher=Shogakukan|date=Feb 20 1996|edition=25th|origdate=Feb 15 1988|isbn=4-09-121881-4|volume=1||256|chapter={{lj|なにがなんだか 前編}}|trans-chapter=What’s What: First Chapter|{{ja-usex|——あ、わたくしマキシムＡＧＦです。リプトン'''星'''からやってまいりました。地%球の寒さにおどろいてます。どぞよろしく。|——あ、わたくしマキシムＡＧＦです。リプトン'''せい'''からやってまいりました。ち%きゅうのさむさにおどろいてます。どぞよろしく。|——Oh, my name is {{w|lang=ja|味の素AGF|Maxim AGF}}. I came here from '''planet''' {{w|Lipton}}. I’m still taken aback by Earth’s coldness. It is a pleasure to meet all of you.|rom=——A, watakushi Makishimu Ējīefu desu. Riputon'''-sei''' kara yatte mairimashita. Chikyū no samusa ni odoroitemasu. Dozo yoroshiku.}}|language=Japanese}}
 
 =====Derived terms=====
 * {{ja-r|輝%星|き%せい|{{l|en|bright}} {{l|en|star}}}}
