--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -28,8 +28,8 @@
 |cat=v
 }}
 
-====Verb====
-{{zh-verb}}
+====Definitions====
+{{zh-hanzi}}
 
 # to [[doubt]]; to be [[suspicious]]
 # to [[worry]] too much
