--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -12,7 +12,7 @@
 ==Chinese==
 
 ===Etymology 1===
-{{zh-see|罵|v|to scold}}
+{{zh-see|罵|v}}
 
 ===Etymology 2===
 {{zh-forms|s=㐷}}
@@ -27,8 +27,8 @@
 |cat=n
 }}
 
-===Noun===
-{{zh-noun}}
+====Definitions====
+{{zh-hanzi}}
 
 # a [[kind]] of [[punishment]] during the {{w|Han Dynasty}}
 
@@ -47,8 +47,8 @@
 |cat=n
 }}
 
-====Noun====
-{{zh-noun}}
+====Definitions====
+{{zh-hanzi}}
 
 # {{lb|zh|Chinese chess}} [[horse]]; [[knight]] (on the red side)
 
