Related term <cut#48426282>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -470,6 +470,7 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 |{{l|en|cut red tape}}
 |{{l|en|cut short}}
 |{{l|en|cut someone some slack}}
+|{{l|en|cut the cackle}}
 |{{l|en|cut the cheese}}
 |{{l|en|cut the mustard}}
 |{{l|en|cut the muster}}
