--- a/en/倮/倮.11054.wikitext
+++ b/en/倮/倮.11054.wikitext
@@ -2,10 +2,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OWD|ids=⿰亻果}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=26294|canj=OWD|ids=⿰亻果}}
 
 ====References====
-* {{Han ref|kx=0109.070|dkj=00797|dj=0232.050|hdz=10177.030|uh=502E|ud=20526}}
+{{Han ref|kx=0109.070|dkj=00797|dj=0232.050|hdz=10177.030|uh=502E}}
 
 ----
 
