--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*flaiską}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pleh₁ḱ-||to tear, peel off}}. Compare German {{m|de|Fleisch}}, Low German {{m|nds|Fleesch}}, West Frisian {{m|fy|fleis}}, Dutch {{m|nl|vlees}}, Danish {{m|da|flæsk}}, {{cog|is|-}} and {{cog|no|flesk}}.
+From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|ang|flǣsċ}}, from {{inh|en|gem-pro|*flaiską}}, from {{der|en|ine-pro|*pleh₁ḱ-|t=to tear, peel off}}. Cognate {{cog|stq|Flaask|t=flesh}}, {{cog|fy|fleis|t=flesh}}, {{cog|nl|vlees|t=flesh}}, {{cog|nds|Fleesch|t=flesh}}, {{cog|de|Fleisch|t=flesh}}, {{cog|da|flæsk|t=flesh}}, {{cog|no|flesk|t=flesh}}, {{cog|is|flesk|t=flesh}}.
 
 ===Pronunciation===
 * {{IPA|/flɛʃ/|lang=en}}
