--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -14,7 +14,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 {{wikipedia}}
 {{en-noun|~}}
 
-# The [[sound]] caused by the discharge of atmospheric electrical charge.
+# The loud rumbling [[sound]] caused by the discharge of atmospheric electrical charge.
 #: '''''Thunder''' ''is preceded by [[lightning]].''
 # A sound resembling thunder; especially, one produced by a [[jet]] [[airplane]] in flight.
 # A deep, [[rumble|rumbling]] noise.
