--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -98,7 +98,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Hungarian: {{t+|hu|harcol}}, {{t+|hu|verekszik}}
 * Icelandic: {{t+|is|slást}}, {{t+|is|berjast}}
 * Indonesian: {{t+|id|kelahi}}, {{t+|id|tarung}}
-* Irish: {{t|ga|troid}}, {{t|ga|comhraic}}
+* Irish: {{t|ga|troid}}, {{t|ga|comhraic}}, {{t|ga|bruíon}}
 * Italian: {{t+|it|lottare}}, {{t+|it|azzuffarsi}}, {{t+|it|battersi}}
 * Japanese: {{t+|ja|喧嘩|tr=けんかする, kenka suru|sc=Jpan|alt=喧嘩する}}, {{t|ja|対決|tr=たいけつする, taiketsu suru|sc=Jpan|alt=対決する}}, {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t+|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
 * Kazakh: {{t|kk|төбелесу|sc=Cyrl}}, {{t|kk|ұрысу|sc=Cyrl}}, {{t+|kk|күресу|sc=Cyrl}}, {{t|kk|соғысу|sc=Cyrl}}
