--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -81,7 +81,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 ====Translations====
 {{trans-top|digestive organ}}
 * Afar: {{t-needed|aa}}
-* Afrikaans: {{t|af|maag}}
+* Afrikaans: {{t+|af|maag}}
 * Albanian: {{t+|sq|mullë}}, {{t+|sq|zgrof}}, {{t+|sq|stomak}}
 * Amharic: {{t|am|ጨጓራ|m|sc=Ethi}}
 * Arabic: {{t|ar|مَعِدَة|f}}, {{t|ar|مِعْدَة|f}}
@@ -246,7 +246,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 {{trans-bottom}}
 
 {{trans-top|belly}}
-* Afrikaans: {{t|af|buik}}
+* Afrikaans: {{t+|af|buik}}
 * Albanian: {{t+|sq|bark}}
 * Arabic: {{t|ar|مَعِدَة|f}}, {{t|ar|مِعْدَة|f}}, {{t|ar|بَطْن|m}}
 * Aramaic:
