/* Translations */ added Yoruba translation entry <United States of America#48437682>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -114,8 +114,8 @@
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|sc=Laoo}}, {{t|lo|ອະເມລິກາ|sc=Laoo}}, {{t|lo|ອາເມລິກາ|sc=Laoo}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
-* Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 {{trans-mid}}
+* Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 * Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}
 * Laz: {{t-needed|lzz}}
 * Lezgi: {{t|lez|Америкадин Садхьанвай Штатар|p|sc=Cyrl}}
@@ -195,6 +195,7 @@
 * West Frisian: {{t+|fy|Feriene Steaten fan Amearika}}
 * Yakut: {{t|sah|Америка Холбоһуктаах Штаттара|sc=Cyrl}}
 * Yiddish: {{t|yi|פֿאַראייניקטע שטאַטן|p}}, {{t|yi|פֿאַראייניקטע שטאַטן פֿון אַמעריקע|p|sc=Hebr}}
+* Yoruba: {{t|yo|Etikun Fagini ti Amẹrika}}
 * Zhuang: {{t|za|Meijgoz}}
 {{trans-bottom}}
 
