--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -114,7 +114,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 {{trans-bottom}}
 
 ===Etymology 2===
-{{etyl|ang|en}} {{m|ang|fēled}}, corresponding to {{suffix|feel|ed|lang=en}}.
+{{der|en|ang|fēled}}, corresponding to {{suffix|feel|ed|lang=en}}.
 
 ====Verb====
 {{head|en|verb form}}
