--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -180,6 +180,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Vietnamese: {{t+|vi|Israel}}, {{t|vi|Ixraen}}
 * Volapük: {{t|vo|Yisraelän}}
 * Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}
+* Yoruba: {{t|yo|Iserẹli}}
 {{trans-bottom}}
 
 {{trans-top|Biblical: name given to Jacob}}
