--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -166,6 +166,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Welsh: {{t+|cy|Seland Newydd|f}}
 * Wolof: {{t|wo|Seland-Gu-Bees}}
 * Yiddish: {{t|yi|ניו־זילאַנד}}
+* Yoruba: {{t|yo|Şilandi Titun}}
 * Zhuang: {{t|za|Saen Saelanz}}
 * Zulu: {{t|zu|INyuzilandi}}
 {{trans-bottom}}
