--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -56,8 +56,8 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 # {{lb|en|transitive}} To experience the [[consequence]]s of.
 #: {{ux|en|'''Feel''' my wrath!}}
 # {{lb|en|copulative}} To [[seem]] (through [[touch]] or otherwise).
-#: {{ux|en|It looks like wood, but it '''feels''' more like plastic.}}
-#: {{ux|en|This is supposed to be a party, but it '''feels''' more like a funeral!}}
+#: {{ux|en|That wooden bench '''feels''' more like plastic.}}
+#: {{ux|en|This party '''feels''' more like a funeral!}}
 # {{lb|en|transitive|US|slang}} To [[understand]].
 #: {{ux|en|I don't want you back here, ya '''feel''' me?}}
 
