--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -6,6 +6,7 @@
 * {{a|GA}} {{enPR|yo͞o-nī'tĭd stāts' əv ə-mĕrʹĭ-kə}}, {{IPA|/juˈnaɪtɪ̈d ˌsteɪts əv əˈmɛɹɪ̈kə/|lang=en}}
 * {{audio|en-uk-United States of America.ogg|Audio (UK)|lang=en}}
 * {{rhymes|ɛɹɪkə|lang=en}}
+* {{hyph|Unit|ed States of Amer|i|ca|lang=en}}
 
 ===Proper noun===
 {{en-proper noun|head=the [[united|United]] [[states|States]] [[of]] [[America]]}}
