--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -283,6 +283,8 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 
 {{trans-top|act of tensing the muscles of the abdomen in order to expel its contents}}
 {{trans-mid}}
+* German: {{t+|de|Druck|m}}
+* Spanish: {{t+|es|empujo|m}}
 {{trans-bottom}}
 
 {{trans-top|great effort (to do something)}}
