t+fr:[[reproduire]] ([[WT:EDIT|Assisted]]) <play#48460170>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -406,7 +406,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|afspelen}}
 * Finnish: {{t+|fi|soittaa}}
-* French: {{qualifier|the media is being played}} {{t+|fr|mettre}}, {{qualifier|to play an already inserted media}} {{t+|fr|lancer}}, {{qualifier|the media is the subject}} {{t+|fr|tourner}}, {{t+|fr|jouer}}
+* French: {{qualifier|the media is being played}} {{t+|fr|mettre}}, {{qualifier|to play an already inserted media}} {{t+|fr|lancer}}, {{qualifier|the media is the subject}} {{t+|fr|tourner}}, {{t+|fr|jouer}}, {{t+|fr|reproduire}}
 * German: {{t|de|abspielen}}, {{t+|de|spielen}}
 * Hebrew: {{t|he|השמיע|tr=hishmía}}
 * Hungarian: {{t|hu|lejátszik}}
