--- a/en/偃/偃.11089.wikitext
+++ b/en/偃/偃.11089.wikitext
@@ -33,7 +33,7 @@
 # {{rfdef|zh}}
 
 ====Compounds====
-{{zh-der|修文偃武|偃仆|偃仰|偃佒|偃兵息甲|偃師縣|偃旗息鼓|偃旗臥鼓|偃月|偃松|偃武修文|偃武興文|偃波書|偃臥|偃草|偃衍|偃蹇|偃蹇困窮|偃鼠|偃鼠飲河|側偃|前合後偃|徐偃王|息偃|文修武偃|文偃|日角偃月|武偃文修|狐偃|臥鼓偃旗|與世偃仰|草偃|草偃風從|草偃風行|言偃|起偃為豎|韜戈偃武|風行草偃|鼻偃齒露}}
+{{zh-der|修文偃武|偃仆|偃仰|偃佒|偃兵息甲|偃師縣|偃旗息鼓|偃旗臥鼓|偃月|偃松|偃武修文|偃武興文|偃波書|偃臥|偃草|偃衍|偃蹇|偃蹇困窮|偃鼠|偃鼠飲河|側偃|前合後偃|徐偃王|息偃|文修武偃|文偃|日角偃月|武偃文修|狐偃|臥鼓偃旗|與世偃仰|草偃|草偃風從|草偃風行|言偃|起偃為豎|韜戈偃武|風行草偃|鼻偃齒露|偃師:[[Yanshi]]}}
 
 ----
 
