--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -121,6 +121,7 @@
 *: Lower Sorbian: {{t|dsb|Zjadnośone kralojstwo}}
 *: Upper Sorbian: {{t|hsb|Zjednoćene kralestwo}}
 * Spanish: {{t+|es|Reino Unido|m}}, {{t|es|Reino Unido de Gran Bretaña e Irlanda del Norte|m}}
+* Swahili: {{t|sw|Ufalme wa Muungano}}
 * Swedish: {{t+|sv|Förenade kungariket}}; {{qualifier|colloquially:}} {{t+|sv|England}}
 * Tagalog: {{t|tl|Nagkakaisang Kaharian}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
