--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -392,6 +392,21 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * {{l|en|cam'st}}
 * {{l|en|kingdom come}}
 
+====Noun====
+{{en-noun|-}}
+
+# {{lb|en|obsolete}} [[coming|Coming]], [[arrival]]; [[approach]].
+#* '''1869''', RD Blackmoore, ''Lorna Doone'', II:
+#*: “If we count three before the '''come''' of thee, thwacked thou art, and must go to the women.”
+# {{lb|en|slang}} [[semen|Semen]]
+# {{lb|en|slang}} Female [[ejaculatory]] [[discharge]].
+
+=====Usage notes=====
+The meaning of ''semen or female ejaculatory discharge'' is considered rude slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling {{m|en|cum}} for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
+
+=====Derived terms=====
+* {{l|en|cum}}
+
 ====Preposition====
 {{en-prep}}
 
