--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -217,7 +217,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 # Having an orange-yellow colour.
 
 ====Translations====
-{{trans-top|colour}}
+{{trans-top|having an orange-yellow colour}}
 * Catalan: {{t|ca|safrà}}
 * Finnish: {{t|fi|sahraminkeltainen}}
 * German: {{t|de|safrangelb}}, {{t|de|safranfarbig}}
