--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -62,8 +62,12 @@
 * Cherokee: {{t|chr|ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ|sc=Cher}}
 * Chinese:
 *: Cantonese: {{t|yue|美利堅合眾國|sc=Hani}}, {{t|yue|美利坚合众国|tr=mei5 lei3 gin1 hap6 zong3 gwok3|sc=Hani}}, {{t|yue|美國|sc=Hani}}, {{t|yue|美国|tr=mei5 gwok3|sc=Hani}}, {{t|yue|美|tr=mei5|sc=Hani}}
+*: Dungan: {{t|dng|Мыйгуй}}, {{t|dng|Мыйгуә}}
+*: Hakka: {{t|hak|美國}}
 *: Mandarin: {{t+|cmn|美利堅合眾國|sc=Hani}}, {{t+|cmn|美利坚合众国|tr=Měilìjiān hézhòngguó|sc=Hani}}, {{t+|cmn|美國|sc=Hani}}, {{t+|cmn|美国|tr=Měiguó|sc=Hani}}, {{t+|cmn|美|tr=Měi-|sc=Hani}}
+*: Min Dong: {{t|cdo|美國}}
 *: Min Nan: {{t|nan|美國|sc=Hani}}, {{t|nan|美国|tr=Bí-kok|sc=Hani}}, {{t|nan|米國|sc=Hani}}, {{t+|nan|米国|tr=Bí-kok|sc=Hani}}
+*: Wu: {{t|wuu|美國}}, {{t|wuu|美国|tr='me koq}}
 * Chuvash: {{t|cv|Америкӑри Пӗрлешӳллӗ Штатсем|sc=Cyrl}}
 * Crimean Tatar: {{t|crh|Amerika Qoşma Ştatları|p}}
 * Czech: {{t+|cs|Spojené státy americké|m-p}}, {{t|cs|Spojené státy|m-p}}
@@ -114,8 +118,8 @@
 *: Sorani: {{t|ku|دەولەتێن یەکبوویییێن ئەمەریکایێ|tr=Dewletên Yekbûyîyên Emerîkayê|sc=ku-Arab}}, {{t|ckb|وڵاتە یەکگرتووەکانی ئەمەریکا|tr=Wiłâta Yekgirtûakâni Amerikâ|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|Америка Кошмо Штаттары|sc=Cyrl}}
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
-* Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|sc=Laoo}}, {{t|lo|ອະເມລິກາ|sc=Laoo}}, {{t|lo|ອາເມລິກາ|sc=Laoo}}
 {{trans-mid}}
+* Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|sc=Laoo}}, {{t|lo|ອະເມລິກາ|sc=Laoo}}, {{t|lo|ອາເມລິກາ|sc=Laoo}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 * Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}
