--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -63,9 +63,9 @@
 * Chinese:
 *: Cantonese: {{t|yue|美利堅合眾國|sc=Hani}}, {{t|yue|美利坚合众国|tr=mei5 lei3 gin1 hap6 zong3 gwok3|sc=Hani}}, {{t|yue|美國|sc=Hani}}, {{t|yue|美国|tr=mei5 gwok3|sc=Hani}}, {{t|yue|美|tr=mei5|sc=Hani}}
 *: Dungan: {{t|dng|Мыйгуй}}, {{t|dng|Мыйгуә}}
-*: Hakka: {{t|hak|美國}}
+*: Hakka: {{t|hak|美國}}, {{t|hak|美国|tr=Mî-koet}}
 *: Mandarin: {{t+|cmn|美利堅合眾國|sc=Hani}}, {{t+|cmn|美利坚合众国|tr=Měilìjiān hézhòngguó|sc=Hani}}, {{t+|cmn|美國|sc=Hani}}, {{t+|cmn|美国|tr=Měiguó|sc=Hani}}, {{t+|cmn|美|tr=Měi-|sc=Hani}}
-*: Min Dong: {{t|cdo|美國}}
+*: Min Dong: {{t|cdo|美國}}, {{t|cdo|美国|tr=Mī-guók}}
 *: Min Nan: {{t|nan|美國|sc=Hani}}, {{t|nan|美国|tr=Bí-kok|sc=Hani}}, {{t|nan|米國|sc=Hani}}, {{t+|nan|米国|tr=Bí-kok|sc=Hani}}
 *: Wu: {{t|wuu|美國}}, {{t|wuu|美国|tr='me koq}}
 * Chuvash: {{t|cv|Америкӑри Пӗрлешӳллӗ Штатсем|sc=Cyrl}}
