--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -181,7 +181,10 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Chechen: {{t-needed|ce}}
 * Chinese:
 *: Cantonese: {{t|yue|嚟|tr=lei4; lai4|sc=Hani}}
+*: Dungan: {{t|dng|лэ}}
 *: Mandarin: {{t+|cmn|來|sc=Hani}}, {{t+|cmn|来|tr=lái|sc=Hani}}
+*: Min Dong: {{t|cdo|來}}, {{t|cdo|来|tr=lì}}
+*: Wu: {{t|wuu|來}}, {{t|wuu|来|tr=le}}
 * Classical Nahuatl: {{t|nci|huītz}}
 * Crimean Tatar: {{t|crh|kelmek}}
 * Czech: {{t+|cs|přicházet|impf}}, {{t+|cs|přijít|pf}}; {{t|cs|přijíždět|impf}}, {{t+|cs|přijet|pf}} {{qualifier|by transport}}
@@ -223,10 +226,10 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Latin: {{t+|la|venio}}, {{t+|la|progredior}}
 * Latvian: {{t+|lv|nākt}}
 * Lithuanian: {{t+|lt|ateiti}}
+{{trans-mid}}
 * Lojban: {{t+|jbo|klama}}
 * Lü: {{t|khb|ᦙᦱ}}
 * Macedonian: {{t|mk|доаѓа|impf}}, {{t|mk|дојде|pf}}
-{{trans-mid}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|ġie}}
 * Manchu: {{t|mnc||tr=jimbi|sc=Mong}}
@@ -285,6 +288,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Turkmen: {{t+|tk|gelmek}}
 * Ukrainian: {{t+|uk|прихо́дити|impf}}, {{t|uk|прийти́|pf}}; {{t|uk|приїжджа́ти|impf}}, {{t|uk|приї́хати|pf}}, {{t|uk|приїзди́ти|impf}} {{qualifier|by transport}}
 * Urdu: {{t+|ur|آنا|tr=ānā}}
+* Uyghur: {{t|ug|كەلمەك}}
 * Uzbek: {{t+|uz|kelmoq}}
 * Venetian: {{t+|vec|vegner}}
 * Vietnamese: {{t+|vi|lại}}
