--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -19,6 +19,7 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 ===Pronunciation===
 {{zh-pron
 |m=zuò
+|dg=зуә1
 |c=zou6
 |h=pfs=cho
 |md=có̤
@@ -77,7 +78,7 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[주]], [[자]]|rv=ju, ja|mr=chu, cha}}
+{{ko-hanja|hangeul=[[주]], [[자]]}}
 
 # {{defn|lang=ko|sort=人09}}
 
