--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -17,7 +17,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 # An instance of drawing something into one's mouth by inhaling.
 #* '''2001''', D. Martin Doney, ''Prayer Capsule: A Book of Honesty'', page 261
 #*: Bammer agreed “Probably a good idea,” he agreed with a quick '''suck''' on his straw, “won't stop you from picking up any of these chicks, though.”
-# {{lb|en|vulgar}} [[fellatio|Fellatio]] of a penis.
+# {{lb|en|vulgar}} of a penis.
 #* '''2012''', Alex Carreras, ''Cruising with Destiny'', page 12
 #*: Nate exhaled a long, slow breath. What the hell was he thinking? He couldn't cruise the steam room looking for married men looking for a quick '''suck'''. He needed to shoot his load, but was he really that desperate?
 # {{lb|en|Canada}} A [[weak]], [[self-pitying]] person; a person who won't [[go along]], especially out of [[spite]]; a [[crybaby]] or [[sore loser]].
