--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -187,7 +187,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 
 {{trans-top|colloquial: term of general disparagement}}
 * Bulgarian: {{t+|bg|духам|tr=dukham}}
-* Dutch: {{t+|cs|být na houby}}, {{t+|cs|být na dvě věci}}
+* Czech: {{t+|cs|být na houby}}, {{t+|cs|být na dvě věci}}
 * Dutch: {{t|nl|klote zijn}}
 * Esperanto: {{t|eo|aĉi}}
 * Finnish: {{t+|fi|haista}}, {{t|fi|olla syvältä}}
