t+zza:[[pırd]] t+zza:[[pırdek]] ([[WT:EDIT|Assisted]]) <bridge#48687740>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -290,6 +290,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Yakut: {{t|sah|муоста|sc=Cyrl}}, {{t|sah|күргэ|sc=Cyrl}}
 * Yiddish: {{t|yi|בריק|f}}
 * Yoruba: {{t|yo|afárá}}
+* Zazaki: {{t|zza|pırd|c}}
 * Zhuang: {{t|za|giuz}}
 * Zulu: {{t|zu|ibhuloho}}
 {{trans-bottom}}
@@ -318,6 +319,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Tagalog: {{t|tl|balingos}}, {{t|tl|balingusan}}
 * Thai: {{t+|th|ดั้ง}}
 * Ukrainian: {{t|uk|перені́сся|n|sc=Cyrl}}
+* Zazaki: {{t|zza|pırdek|c}}
 {{trans-bottom}}
 
 {{trans-top|replacement for teeth}}
@@ -382,6 +384,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Swedish: {{t+|sv|brygga|c}}
 * Turkish: {{t+|tr|köprü}}
 * Yiddish: {{t|yi|בריקל|n}}
+* Zazaki: {{t|zza|pırd|c}}
 {{trans-bottom}}
 
 {{trans-top|communications}}
@@ -392,6 +395,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Greek: {{t+|el|γέφυρα|f}}
 * Spanish: {{t|es|pasarela|f}}
 * Swahili: {{t+|sw|daraja}}
+* Zazaki: {{t|zza|pırd|c}}
 {{trans-bottom}}
 
 {{trans-top|chemistry}}
@@ -400,6 +404,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 {{trans-mid}}
 * Macedonian: {{t|mk|мост|m|sc=Cyrl}}
 * Russian: {{t+|ru|мо́стик|m}}
+* Zazaki: {{t|zza|pırd|c}}
 {{trans-bottom}}
 
 {{trans-top|piece on string instruments}}
@@ -421,6 +426,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Maori: {{t|mi|herenga aho}}
 * Persian: {{t+|fa|خرک|tr=xarak|sc=fa-Arab}}
 * Portuguese: {{t+|pt|cavalete|m}}
+* Zazaki: {{t|zza|pırdek|c}}
 {{trans-bottom}}
 
 {{trans-top|wrestling position}}
