--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -491,13 +491,13 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 ====Translations====
 {{trans-top|to perform an incision}}
 * Afrikaans: {{t|af|sny}}
-* Amharic: {{t|am|መቁረጥ}}|tr=mäquräṭ
+* Amharic: {{t|am|መቁረጥ|tr=mäquräṭ}}
 * Arabic: {{t+|ar|جَرَحَ}}
 * Armenian: {{t+|hy|կտրել}}
 * Aromanian: {{t|rup|talju}}, {{t|rup|talj}}
 * Assamese: {{t|as|কটা}}, {{t|as|কাটা}}
 * Belarusian: {{t|be|рэ́заць|impf}}, {{t|be|секчы́|impf}}, {{t|be|рубі́ць|impf}} {{qualifier|axe}}
-* Bengali: {{t|bn|কাটা}}|tr=kaţa
+* Bengali: {{t|bn|কাটা|tr=kaţa}}
 * Bulgarian: {{t+|bg|ре́жа}}
 * Catalan: {{t+|ca|tallar}}
 * Chinese:
@@ -516,7 +516,7 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * Georgian: {{t|ka|გაჭრა}}, {{t|ka|გაკვეთა}}
 * German: {{t|de|einschneiden}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
-* Hindi: {{t+|hi|काटना}}|tr=kāṭnā
+* Hindi: {{t+|hi|काटना|tr=kāṭnā}}
 * Icelandic: {{t+|is|skera}}
 * Indonesian: {{t+|id|potong}}
 * Irish: {{t|ga|gearr}}
@@ -651,7 +651,7 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 {{trans-top|to enter a queue in a wrong place}}
 * Armenian: {{t+|hy|կտրել}}
 * Chinese:
-*: Mandarin: {{t+|cmn|插队}}, {{t+|cmn|加塞儿|tr=jiāsāir}}
+*: Mandarin: {{t|cmn|插隊}}, {{t+|cmn|插队|tr=chāduì}}, {{t|cmn|加塞兒}}, {{t+|cmn|加塞儿|tr=jiāsāir}}
 * Danish: {{t+|da|snyde}}
 * Dutch: {{t|nl|voorsteken}}
 * Finnish: {{t+|fi|etuilla}}, {{t+|fi|kiilata}}
