--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -232,7 +232,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Vietnamese: {{t+|vi|dạ dày}}, {{t+|vi|bao tử}}
 * Vilamovian: {{t|wym|maoga}}
 * Volapük: {{t+|vo|stomäg}}
-* Walloon: {{t-needed|wa}}
+* Walloon: {{t+|wa|stoumak}}
 * Welsh: {{t+|cy|bola}}
 * West Coast Bajau: {{t|bdr|betong}}
 * West Frisian: {{t|fy|mage}}
