--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -264,7 +264,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Greek: {{t+|el|κλάδος|m|sc=Grek}}
 * Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}}, {{t+|hu|csoport}}
 * Ido: {{t+|io|fako}}
-* Italian: {{t+|it|branca|f}}, {{t+|it|ramo|m}}
+* Italian: {{t+|it|branca|f}}, {{t+|it|ramo|m}}, {{t+|it|settore|m}}
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
 * Portuguese: {{t+|pt|divisão|f}}, {{t+|pt|ramo|m}} {{qualifier|in science, in arts}}
 {{trans-mid}}
