t+cs:[[obor]] ([[WT:EDIT|Assisted]]) <branch#48958227>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -257,6 +257,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 {{trans-top|area in business or of knowledge, research}}
 * Armenian: {{t+|hy|ճյուղ}}
 * Bulgarian: {{t+|bg|о́бласт|f}}
+* Czech: {{t+|cs|obor|m}}
 * Dutch: {{t+|nl|branch}} (of business), {{t+|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
 * Georgian: {{t|ka|დარგი}}, {{t|ka|სფერო}}
