t+sh:[[struka]] ([[WT:EDIT|Assisted]]) <branch#48958233>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -273,7 +273,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Russian: {{t+|ru|о́трасль|f}}, {{t+|ru|о́бласть|f}}
 * Scots: {{t|sco|brainch}}
 * Scottish Gaelic: {{t|gd|meur|f}}
-* Serbo-Croatian: {{t+|sh|grana|f}}
+* Serbo-Croatian: {{t+|sh|grana|f}}, {{t+|sh|struka|f}}
 * Swedish: {{t+|sv|gren|c}}, {{t+|sv|område|n}}
 * Tagalog: {{t|tl|sangay}}
 * Telugu: {{t+|te|శాఖ}}
