--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -453,7 +453,7 @@ Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the win
 ==Catalan==
 
 ===Pronunciation===
-{{rfp|lang=ca}}
+* {{ca-IPA|ò}}
 
 ===Etymology 1===
 From {{der|ca|la|portus}}.
