t+ko:[[가다]] t+ko:[[도착하다]] t+ko:[[이르다]] ([[WT:EDIT|Assisted]]) <come#48992653>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -321,6 +321,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 {{trans-mid}}
 * Irish: {{t|ga|tar}}
 * Japanese: {{t+|ja|着く|tr=tsuku|sc=Jpan}}
+* Korean: {{t+|ko|도착하다}}, {{t+|ko|이르다}}
 * Macedonian: {{t|mk|доаѓа}}, {{t|mk|пристига}}
 * Norwegian: {{t|no|ankomme}}, {{t+|no|komme}}
 * Persian: {{t+|fa|رسیدن|tr=ra(e)sidan|sc=fa-Arab}}
@@ -362,6 +363,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Icelandic: {{t|is|fá það}}
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|いく|tr=iku}}, {{t|ja|イく|tr=iku|sc=Jpan}}
+* Korean: {{t+|ko|가다}} {{qualifier|slang}}
 * Macedonian: {{t|mk|свршува}}
 * Norwegian: {{t+|no|komme}}
 * Polish: {{t+|pl|dochodzić|impf}}, {{t+|pl|dojść|pf}}
