t+ro:[[tuna]] ([[WT:EDIT|Assisted]]) <thunder#48993767>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -337,6 +337,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Korean: {{t|ko|고함치다}}
 * Polish: {{t|pl|gromić}}
 * Portuguese: {{t+|pt|trovejar}}
+* Romanian: {{t+|ro|tuna}}
 {{trans-bottom}}
 
 {{trans-top|transitive: say something with a loud, threatening voice}}
