t+shn:[[တွင်ႉ]] ([[WT:EDIT|Assisted]]) <stomach#49001485>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -200,7 +200,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|желудац|m|sc=Cyrl}}, {{t|sh|стомак|m|sc=Cyrl}}
 *: Roman: {{t+|sh|želudac|m}}, {{t+|sh|stomak|m}}
-* Shan: {{t-needed|shn}}
+* Shan: {{t|shn|တွင်ႉ}}
 * Sicilian: {{t|scn|stòmmacu|m}}
 * Sindhi: {{t-needed|sd}}
 * Sinhalese: {{t+|si|බඩ|sc=Sinh}}
