--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -23,6 +23,7 @@
 |h=pfs=fu
 |mn=pò͘/ml:hù/tw:hū
 |mn_note=pò͘ - vernacular (including surname); hù/hū - literary
+|mn-t=hu3, bou3 (surname)
 |mc=y
 |oc=y
 |ma=
