--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -31,7 +31,8 @@
 |md=
 |mn=tòaⁿ/tàn
 |mn_note=tòaⁿ - vernacular; tàn - literary
-|mn-t=dang3, duan3 (female character)
+|mn-t=dang3/duan3
+|mn-t_note=duan3 - “female character”
 |w=
 |mc=y
 |oc=y
