t+zza:[[amayen]] t+zza:[[yen]] t+zza:[[bıyen]] ([[WT:EDIT|Assisted]]) <come#49014728>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -299,7 +299,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Yiddish: {{t|yi|קומען|sc=Hebr}}
 * Yoruba: {{t-needed|yo}}
 * Yucatec Maya: {{t|yua|tal}}
-* Zazaki: {{t|zza|amaene}}
+* Zazaki: {{t|zza|amaene}}, {{t|zza|amayen}}
 * Zhuang: {{t|za|daeuj}}
 * Zulu: {{t|zu|za|alt=-za}}
 {{trans-bottom}}
@@ -373,6 +373,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Serbo-Croatian: {{t+|sh|svršiti}} {{qualifier|colloquial}}
 * Spanish: {{t+|es|correrse}}, {{t+|es|venirse}}
 * Thai: {{t|th|ถึงจุดสุดยอด|tr=těung jùt sùt yôt}}, {{t+|th|เสร็จ}}
+* Zazaki: {{t|zza|yen}}
 {{trans-bottom}}
 
 {{trans-top|to become}}
@@ -385,6 +386,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Macedonian: {{t|mk|станува}}
 * Russian: {{t+|ru|станови́ться|impf}}, {{t+|ru|стать|pf}}
 * Vietnamese: {{t+|vi|thành}}, {{t+|vi|trở nên}}, {{t+|vi|trở thành}}
+* Zazaki: {{t|zza|bıyen}}
 * Zulu: {{t|zu|ba|alt=-ba}}
 {{trans-bottom}}
 
