--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -24,6 +24,7 @@
 |md=sŏ̤h
 |mn=ml:cho̍k/qz,tw,xm,zz:cho̍h/qz:chǎ/tw,xm,zz:chā
 |mn_note=cho̍k - literary; cho̍h/chǎ/chā - vernacular
+|mn-t=zok8, zoh8
 |w=5zoq,3zo
 |mc=y
 |oc=y
